<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:blurkit="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:openDrawer="start">

    <androidx.cardview.widget.CardView
...
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:id="@+id/main_content_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:id="@+id/frame_ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <viewpagerindicator.CustomViewPager
                        android:id="@+id/viewpager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:visibility="visible" />

                </RelativeLayout>

...
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:visibility="visible">

                <viewpagerindicator.TabPageIndicator
                    android:id="@+id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_gap_64"
                    android:layout_marginStart="@dimen/margin_gap_14"
                    android:layout_marginEnd="@dimen/margin_gap_14"
                    android:layout_marginBottom="@dimen/margin_gap_6"
                    android:visibility="gone"
...
                        android:layout_marginStart="@dimen/margin_gap_10"
                        android:background="@drawable/bg_app_setting_checkbox"
                        android:button="@android:color/transparent" />
                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycleviewDrawerList"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_gap_60"
                    android:layout_marginStart="@dimen/margin_gap_8"
                    android:layout_marginEnd="@dimen/margin_gap_8"
...
