<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_color"
    android:clickable="false">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/pack_offer_subscribe_btn"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/voda_logo_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_gap_32"
                android:layout_centerHorizontal="true"
                android:background="@drawable/shreyaset_logo" />


            <TextView
                android:id="@+id/otp_heading1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/voda_logo_container"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_gap_36"
                android:gravity="center"
                android:text="@string/otp_stp1_heading1"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/otp_login_text"
                android:textSize="@dimen/textsize_30"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/otp_heading2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otp_heading1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_gap_24"
                android:layout_marginRight="@dimen/margin_gap_16"
                android:layout_marginTop="@dimen/margin_gap_16"
                android:gravity="center"
                android:text="@string/otp_stp1_heading2"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/otp_login_text"
                android:textSize="@dimen/textsize_16"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/otp_heading3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otp_heading2"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_gap_32"
                android:layout_marginRight="@dimen/margin_gap_32"
                android:layout_marginTop="@dimen/margin_gap_24"
                android:gravity="center"
                android:text="@string/otp_stp1_heading3"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/otp_login_text"
                android:textSize="@dimen/textsize_16"
                android:textStyle="normal" />

            <RelativeLayout
                android:id="@+id/layout_edit_btns"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/otp_heading3"
                android:layout_marginTop="@dimen/margin_gap_24">

                <RelativeLayout
                    android:id="@+id/otp_mobile_no_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:weightSum="1">

                    <EditText
                        android:id="@+id/otp_mobile_no"
                        android:layout_width="@dimen/margin_gap_210"
                        android:layout_height="@dimen/margin_gap_32"
                        android:layout_centerInParent="true"
                        android:background="@drawable/otp_edit_txt_bg"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="start|center"
                        android:hint="@string/otp_msg_hint_mobile_no"
                        android:imeOptions="actionDone"
                        android:inputType="number"
                        android:maxLength="10"
                        android:paddingLeft="@dimen/margin_gap_4"
                        android:singleLine="true"
                        android:textAppearance="@style/TextAppearance.NormalFontRegular"
                        android:textColor="@color/otp_login_editext_entry_color"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/textsize_14"
                        android:textStyle="normal" />

                    <ImageView
                        android:id="@+id/otp_mobile_no_tick_mark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_gap_16"
                        android:layout_toRightOf="@+id/otp_mobile_no"/>
                </RelativeLayout>

                <EditText
                    android:id="@+id/otp_text_enter_otp"
                    android:layout_width="@dimen/margin_gap_210"
                    android:layout_height="@dimen/margin_gap_28"
                    android:layout_below="@+id/otp_mobile_no_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_gap_16"
                    android:background="@drawable/otp_edit_txt_bg"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:gravity="start|center"
                    android:hint="@string/otp_enter_otp_hint"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="6"
                    android:paddingLeft="@dimen/margin_gap_4"
                    android:singleLine="true"
                    android:textAppearance="@style/TextAppearance.NormalFontRegular"
                    android:textColor="@color/otp_login_editext_entry_color"
                    android:textColorHint="@color/color_999999"
                    android:textSize="@dimen/textsize_14"
                    android:textStyle="normal"
                    android:visibility="gone" />

                <RelativeLayout
                    android:id="@+id/otp_drop_down_email_ids_otp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/otp_mobile_no_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/margin_gap_16">

                    <AutoCompleteTextView
                        android:id="@+id/otp_drop_down_email_ids"
                        android:layout_width="@dimen/margin_gap_210"
                        android:layout_height="@dimen/margin_gap_32"
                        android:background="@drawable/otp_edit_txt_bg"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:gravity="start|center"
                        android:hint="@string/otp_msg_hint_email"
                        android:imeOptions="actionDone"
                        android:paddingLeft="@dimen/margin_gap_4"
                        android:singleLine="true"
                        android:layout_centerInParent="true"
                        android:textAppearance="@style/TextAppearance.NormalFontRegular"
                        android:textColor="@color/color_cccccc"
                        android:textColorHint="@color/color_999999"
                        android:textSize="@dimen/textsize_14"
                        android:visibility="visible" />

                    <ImageView
                        android:id="@+id/otp_email_id_tick_mark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="@dimen/margin_gap_16"
                        android:layout_toRightOf="@+id/otp_drop_down_email_ids"
                        android:layout_centerVertical="true"/>
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/otp_layout_btns"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_edit_btns"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_gap_42"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/otp_btn_1"
                    android:layout_width="@dimen/margin_gap_108"
                    android:layout_height="@dimen/margin_gap_28"
                    android:background="@drawable/otp_btn_bg"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/otp_mobileno_continue"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.NormalFontRegular"
                    android:textColor="@color/otp_login_continue_text_color"
                    android:textSize="@dimen/textsize_16"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/otp_btn_2"
                    android:layout_width="@dimen/margin_gap_108"
                    android:layout_height="@dimen/margin_gap_28"
                    android:layout_marginLeft="@dimen/margin_gap_8"
                    android:background="@drawable/otp_btn_bg"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/otp_resend"
                    android:textAllCaps="false"
                    android:textAppearance="@style/TextAppearance.NormalFontRegular"
                    android:textColor="@color/otp_login_continue_text_color"
                    android:textSize="@dimen/textsize_16"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_tnc"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/otp_layout_btns"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_gap_16"
                android:gravity="center"
                android:padding="@dimen/margin_gap_16"
                android:text="@string/txt_tnc_on_otp"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/otp_login_note_color"
                android:textSize="@dimen/textsize_16"
                android:visibility="gone" />

            <TextView
                android:id="@+id/otp_change_number"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/txt_tnc"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_gap_24"
                android:text="@string/otp_change_numer"
                android:textColor="@color/color_999999"
                android:visibility="gone" />

            <TextView
                android:id="@+id/otp_note_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/otp_change_number"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/margin_gap_16"
                android:layout_marginLeft="@dimen/margin_gap_16"
                android:layout_marginRight="@dimen/margin_gap_16"
                android:layout_marginTop="@dimen/margin_gap_24"
                android:gravity="center"
                android:text="@string/otp_info_abt_security"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/textsize_10"
                android:visibility="gone" />

            <TextView
                android:id="@+id/otp_skip_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/otp_note_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_gap_16"
                android:text="@string/otp_skip_text"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@color/color_999999"
                android:textSize="@dimen/textsize_16"
                android:visibility="gone" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>