...
    <string name="download_status_failed_acquiring_drm_license">Please relaunch the App to finish download...</string>

    <string name="download_state_failed_generic_text">Oops, something went wrong. Please try again later!</string>
    <string name="download_state_rare_download">A rare error! Do write to us at support</string>

    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="txt_download_settings">Downloading</string>
    <string name="downloading">Downloading...</string>
    <string name="player_msg_optimizing_playback">Optimising for best viewing experience, just a second!</string>
    <string name="media_player_error_no_network_drm_session">Sorry, We\'re unable to play content in offline, Please enable the internet and try again</string>
    <string name="vf_download_init_download_message">Initiating download. Please wait.</string>
    <string name="apply">Apply</string>
...

    <string name="view_all">See all</string>
    <string name="forgot_password">Forgot?</string>
    <string name="otp_info_abt_security">Note: These details will be shared with our partners so that you can enjoy content on multiple devices like Laptop, TV, etc.</string>
    <string name="otp_msg_hint_mobile_no">eg: 90000 00000</string>
    <string name="otp_msg_hint_email">abcdefgh@gmail.com</string>
    <string name="otp_mobileno_continue">Continue</string>
    <string name="otp_resend">Resend OTP</string>
    <string name="otp_skip_text"><u>Skip</u>\u0020</string>
    <string name="otp_change_numer"><u>Change Number</u>\u0020</string>
    <string name="forgot_password_text"><u>Reset password link will be sent to below email id</u>\u0020</string>

    <string name="otp_stp1_heading1">Hello!</string>
...
    <string name="empty_otp_text">Please enter otp!</string>
    <string name="otp_length_error">Please enter 6 digit otp</string>

    <string name="otp_stp3_heading1">Enter OTP!</string>
    <string name="otp_stp3_heading3">Oops we couldn’t detect the OTP, please enter it below.</string>
    <string name="otp_waiting">Waiting...</string>
    <string name="otp_go">Go</string>
    <string name="smart_card_alert">Please check the number and try again</string>
    <string name="otp_msg_invalid_email_id">Please enter a valid email id</string>
    <string name="otp_msg_invalid_mobile_no">Please enter valid Mobile number</string>
    <string name="otp_msg_invalid_mobile_nos">Please enter Mobile number</string>
    <string name="otp_msg_new_password">Password should be minimum six characters</string>
    <string name="otp_msg_invalid_country_code">Please select valid country code</string>
...
