...
                />

            <TextView
                android:id="@+id/media_player_rewind_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/media_player_fowrard_icon"
                android:layout_toRightOf="@+id/media_player_play_pause_icon"
                android:layout_marginTop="@dimen/margin_gap_2"
                android:gravity="center"
                android:text="-30"
                android:textAppearance="@style/TextAppearance.NormalFontRegular"
                android:textColor="@android:color/white"
...
